# nand2tetris-rs

./: .gitignore  Cargo.toml  readme.md
hardware_simulator/: Cargo.toml
hardware_simulator/src/: app.rs  bus_range.rs  channel_range.rs  clock_behavior.rs  lib.rs  main.rs  parser.rs  utils.rs
hardware_simulator/src/app/: image.rs  mod.rs
hardware_simulator/src/model/: build_ctx.rs  builtin.rs  mod.rs  native.rs
hardware_simulator/src/model/chip/: build_ctx.rs  builtin.rs  error.rs  mod.rs  vchip.rs
hardware_simulator/src/model/chip/native/: build.rs  chip.rs  conn_edge.rs  edge_set.rs  mod.rs  vchip.rs
hardware_simulator/src/model/native/: build.rs  mod.rs  vchip.rs
hardware_simulator/src/model/parser/: And16.hdl  channel.rs  chip.rs  connection.rs  interface.rs  mod.rs  pin_decl.rs  symbols.rs
hardware_simulator/src/parser/: And16.hdl  chip.rs  connection.rs  instruction.rs  interface.rs  mod.rs  pin_decl.rs  symbols.rs  test_tools.rs
hardware_simulator/tests/: dmux.rs  not.rs  test_loader.rs
hardware_simulator/www/: index.html  index.js  package-lock.json  package.json  style.css
jack_compiler/: Cargo.toml
n2t-asm/: Cargo.toml
n2t-asm/src/: debug.rs  main.rs
n2t-asm/src/assemble/: convert.rs  predefined.rs  symbol_table.rs
n2t-asm/src/err/: str.rs
n2t-asm/src/parse/: cinstr.rs  mod.rs  parsing.rs  space.rs  util.rs
n2t-asm/test/: Fill.asm  Fill.hack  Mult.asm  Mult.hack  PongShort.asm  PongShort.hack  Test.hack
n2t_asm/: Cargo.toml
n2t_asm/src/: lib.rs  macro_rule.rs  main.rs
n2t_asm/src/assemble/: mod.rs
n2t_asm/src/disassemble/: from_struct.rs  mod.rs
n2t_asm/src/err/: error.rs  mod.rs
n2t_asm/src/parse/: cinstr.rs  mod.rs  parsing.rs  structs.rs  util.rs
n2t_hdl/: Cargo.toml
n2t_hdl/src/: channel_range.rs  clock_behavior.rs  lib.rs  prelude.rs
n2t_hdl/src/model/: mod.rs
n2t_hdl/src/model/chip/: build_ctx.rs  builder.rs  builtin.rs  error.rs  mod.rs  native.rs  vchip.rs
n2t_hdl/src/model/chip/native/: build.rs  chip.rs  conn_edge.rs  edge_set.rs  mod.rs
n2t_hdl/src/model/chip_v2/: builder.rs  builtin.rs  error.rs  mod.rs  native.rs
n2t_hdl/src/model/parser/: channel.rs  chip.rs  connection.rs  error.rs  interface.rs  mod.rs  symbols.rs
n2t_hdl/tests/: dmux.rs  not.rs  test_loader.rs
n2t_jack/: Cargo.toml
n2t_jack/src/: lib.rs  translate.rs  util.rs
n2t_jack/src/translate/: arithmetic.rs  common.rs  keyword.rs  mod.rs  prelude.rs  stack.rs
n2t_server/: Cargo.toml
n2t_tauri/: package-lock.json  package.json
n2t_tauri/src-tauri/: Cargo.toml  tauri.conf.json
n2tcc/: Cargo.toml
n2tcc/src/: asm.rs  common.rs  main.rs  vm.rs
src/: error.rs  main.rs
src/assemble/: convert.rs  mod.rs  predefined.rs  symbol_table.rs
src/err/: error.rs  mod.rs  str.rs
src/parse/: cinstr.rs  mod.rs  parse.rs  parsing.rs  space.rs  structs.rs  util.rs
src/parse_spanned/: cinstr.rs  mod.rs  parsing.rs  space.rs  structs.rs  util.rs
test_files/: And.hdl  DMux.hdl  Mux.hdl  Or16.hdl
test_files/01/: DMux4Way.hdl  DMux8Way.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Or8Way.hdl  Xor.hdl
test_files/02/: ALU.hdl  FullAdder.hdl  HighBit.hdl  HighHalf.hdl  LowHalf.hdl
test_files/03/a/: Bit.hdl  PC.hdl  RAM64.hdl  RAM8.hdl
test_files/03/b/: RAM16K.hdl  RAM4K.hdl  RAM512.hdl
