[package]
name = "nand2tetris-assembler"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24.0"
strum_macros = "0.24.0"
nom = "7.1.0"
bitflags = "1.3.2"
nom-supreme = "0.7.0"
derive_more = "0.99.17"
structopt = "0.3.26"