[package]
name = "nand2tetris-assembler"
version = "0.3.1"
edition = "2021"
authors = ["Eric Yu (github.com/zbrachinara)"]

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
strum = "0.24.0"
strum_macros = "0.24.0"
nom = "7.1.0"
bitflags = "1.3.2"
nom-supreme = "0.7.0"
derive_more = "0.99.17"
structopt = "0.3.26"
thiserror = "1.0.30"