[package]
name = "hardware_simulator"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"
nom_locate = "4.0.0"
nom-supreme = "0.6.0"
thiserror = "1.0.30"
derive_more = "0.99.17"
cached = {version="0.30.0", features = [ "proc_macro" ], default-features = false}
petgraph = "0.6.0"
itertools = "0.10.3"
