[package]
name = "n2t_asm"
version = "0.5.0"
edition = "2021"
authors = ["Eric Yu (github.com/zbrachinara)"]

#[profile.release]
#strip = true
#lto = true
#panic = "abort"
#codegen-units = 1

[dependencie]
strum = "0.24"
strum_macros = "0.24"
nom = { version = "7.1", default-features = false }
nom_locate = "4.0"
bitflags = "1.3"
thiserror = "1.0"
