[package]
name = "n2t_hdl"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"
nom_locate = "4.0.0"
nom-supreme = "0.6.0"
thiserror = "1.0.30"
anyhow = "1.0.53"
derive_more = "0.99.17"
petgraph = "0.6.0"
itertools = "0.10.3"
bitvec = "1.0.0"
