[package]
name = "n2t_hdl"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1"
nom_locate = "4.0"
nom-supreme = "0.8"
thiserror = "1.0"
anyhow = "1.0"
derive_more = "0.99"
petgraph = "0.6"
itertools = "0.10"
bitvec = "1.0"
funty = "2.0"
