[package]
name = "n2tcc"
version = "0.2.0"
edition = "2021"
description = "A compiler for various nand2tetris languages"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
n2t_asm = { path = "../n2t_asm" }
n2t_jack = { path = "../n2t_jack" }